@@ -3,15 +3,13 @@ package com.myflavor.myflavor.domain.feed.service;
 import java.io.IOException;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
-import java.util.HashSet;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.redis.connection.Message;
 import org.springframework.data.redis.connection.MessageListener;
@@ -28,7 +26,6 @@ import com.myflavor.myflavor.domain.feed.DTO.db.FeedDTO;
 import com.myflavor.myflavor.domain.feed.DTO.db.MainFeedDTO;
 import com.myflavor.myflavor.domain.feed.DTO.mapper.FeedMapper;
 import com.myflavor.myflavor.domain.feed.DTO.mapper.FeedResponseMapper;
-import com.myflavor.myflavor.domain.feed.DTO.redis.FeedViewLogDTO;
 import com.myflavor.myflavor.domain.feed.DTO.request.FeedResquestDTO;
 import com.myflavor.myflavor.domain.feed.DTO.response.CustomPageResponse;
 import com.myflavor.myflavor.domain.feed.DTO.response.FeedResponseDTO;
@@ -51,6 +48,8 @@ public class FeedService implements MessageListener {
 	private final String FEED_BACKUP_KEY_PREFIX = "backupFeed:";
 	private final String USER_FEED_KEY_PREFIX = "user:";
 	private final String USER_FEED_VIEW_LOG = "user:feed_view:";
+	private final String RECOMMEND_FEED_CACHE_SCORE = "user:feed_cache_score:";
+	private final String RECOMMEND_FEED_CACHE = "user:feed_cache:";
 	private MainFeedRepository mainFeedRepository;
 	private SubFeedRepository subFeedRepository;
 	private CommentRepository commentRepository;
@@ -65,6 +64,9 @@ public class FeedService implements MessageListener {
 	private UserRepository userRepository;
 	@Autowired
 	private RestaurantRepository restaurantRepository;
+	private FeedCandidateService feedCandidateService;
+	private FeedCachManagerService feedCachManagerService;
+
 	private final int TTL_SECONDS = 1800; // 30분
 	private final double hot_weight = 0.8;
 	private final double time_weight = 0.2;
@@ -73,7 +75,8 @@ public class FeedService implements MessageListener {
 		CommentRepository commentRepository,
 		FeedConfigurationRepository feedConfigurationRepository, HeartRepository heartRepository,
 		RedisTemplate<String, Object> redisTemplate, SnowFlakeIdProvider snowFlakeIdProvider,
-		ObjectMapper objectMapper) {
+		ObjectMapper objectMapper, FeedCandidateService feedCandidateService,
+		FeedCachManagerService feedCachManagerService) {
 		this.mainFeedRepository = mainFeedRepository;
 		this.subFeedRepository = subFeedRepository;
 		this.commentRepository = commentRepository;
@@ -82,6 +85,8 @@ public class FeedService implements MessageListener {
 		this.redisTemplate = redisTemplate;
 		this.snowFlakeIdProvider = snowFlakeIdProvider;
 		this.objectMapper = objectMapper;
+		this.feedCandidateService = feedCandidateService;
+		this.feedCachManagerService = feedCachManagerService;
 	}
 
 	// FIXME  userNmae이 아니라 userVO나 User 객체를 받도록 수정.
@@ -133,6 +138,7 @@ public class FeedService implements MessageListener {
 	}
 
 	// 상세 보기
+	// FIXME REDIS 핫 랭크 업데이트 시 격리 조건  검토 하기
 	public FeedResponseDTO getFeed(long feedId, String userName) {
 		// feedId, userName
 		// AUTH가 필요
@@ -146,15 +152,8 @@ public class FeedService implements MessageListener {
 		String redisCategoryKey =
 			USER_FEED_VIEW_LOG + userName + ":category";
 		String redisWriterKey = USER_FEED_VIEW_LOG + userName + ":writer";
-		FeedViewLogDTO feedViewLogDTO = FeedViewLogDTO.builder()
-			.feedWriterName(mainFeed.getUser().getName())
-			.feedId(mainFeed.getId())
-			.latitude(mainFeed.getRestaurant().getLatitude())
-			.longitude(mainFeed.getRestaurant().getLongitude())
-			.viewerName(userName)
-			.restaurantCategory(mainFeed.getRestaurant().getRestaurantCategory().getCategoryName())
-			.build();
 
+		//FIXME Score 격리 조건 확인
 		Double preCategoryScore = redisTemplate.opsForZSet()
 			.score(redisCategoryKey, mainFeed.getRestaurant().getRestaurantCategory().getCategoryName());
 		Double preWriterScore = redisTemplate.opsForZSet().score(redisWriterKey, mainFeed.getUser().getName());
@@ -165,18 +164,18 @@ public class FeedService implements MessageListener {
 		if (preWriterScore == null)
 			preWriterScore = 0.0;
 
-		// 🔥 새로운 점수 계산 (자주 본 항목 + 최근 본 항목 반영)
+		// 새로운 점수 계산 (자주 본 항목 + 최근 본 항목 반영)
 		double newCategoryScore = (preCategoryScore * 0.9) + (currentTime / 1000000.0);
 		double newWriterScore = (preWriterScore * 0.9) + (currentTime / 1000000.0);
 
 		// 피드 본 내역 로그 저장
 		// 스코어는 이전에 있는 값을 가져와서 + 현재 시간을 더한다. => 자주 검색 + 최근에 검색
-		// 🔥 카테고리 점수 업데이트 (전체 ZSET에 반영)
+		// 카테고리 점수 업데이트 (전체 ZSET에 반영)
 		redisTemplate.opsForZSet()
 			.add(redisCategoryKey, mainFeed.getRestaurant().getRestaurantCategory().getCategoryName(),
 				newCategoryScore);
 
-		// 🔥 유저 점수 업데이트 (전체 ZSET에 반영)
+		// 유저 점수 업데이트 (전체 ZSET에 반영)
 		redisTemplate.opsForZSet().add(redisWriterKey, mainFeed.getUser().getName(), newWriterScore);
 
 		return new FeedResponseDTO(new MainFeedDTO(mainFeed));
@@ -191,60 +190,54 @@ public class FeedService implements MessageListener {
 		// TODO 이걸 연관된 Feed 추천 알고리즘으로 변경
 		// 최근 1시간 이내 써진 글 => 없으면 1시간 씩 추가
 
-		long pageOffset = pageable.getOffset();
-		long pageSize = pageable.getPageSize();
-
 		/** Cache update
 		 *  cache miss 일 경우 => 기본 로직 (1주일 이후)
 		 *  cache hit 일 경우 => 캐시 시간 이후
 		 * */
+		LocalDateTime latestFeedTime = feedCachManagerService.getLatestCacheTime(userName);
 
-		// 후보군 1000개
-		// FIXME 이걸 매번 쿼리를 하는 것이 아닌 일정 스코어까지는 사용
-		// FIXME -> (해당 리스트의 일정이상이 본 것이거나, hot record가 내려갔다면... ( 해당 후보군의 평균 생성시간, 현재 트랜드(전체 검색 통걔), 내 검색/view 통계 등과 맞는 지 점수를 검증한다. )  ) )
-		Set<MainFeed> candidates = new HashSet<>();
+		// FIXME 만약에 시간이 1분 아래라면 db 안가도 될듯.
+		Set<MainFeed> candidates = feedCandidateService.getCandidates(userName, latestFeedTime);
 
-		// TODO 비동기 => 코루틴()
-		// In-Network (900)개
-		// 내가 팔로우한 사람 기준으로 => 인기글 && 최신 (300개)
-		List<MainFeed> followerFeeds = mainFeedRepository.queryByUserFollower(userName,
-			LocalDateTime.now().minusDays(8));
-		candidates.addAll(followerFeeds);
+		// TODO 평가 함수
+		// score 평가 => score는 지금은 시간 순으로 지정
+		List<MainFeedDTO> candidateList = new ArrayList<>(candidates).stream().map(MainFeedDTO::new).toList();
+		List<Long> scores = candidateList.stream().map(this::evaluationFunction).toList();
+		feedCachManagerService.saveBulkFeedCache(userName, candidateList, scores);
 
-		// 내가 자주 본 사람 (상세를 본 기준) -> 최근에 자주 본 카테고리 10개 && 전체 인기글 && 최신 (300개)
-		String frequentPersonkey = USER_FEED_VIEW_LOG + userName + ":writer";
-		List<String> frequentViewPersons = Objects.requireNonNull(redisTemplate.opsForZSet().reverseRange(
-				frequentPersonkey, 0, 9))
-			.stream().map(String::valueOf).collect(
-				Collectors.toList());
-		List<MainFeed> frequentPersionFeeds = mainFeedRepository.findByUser_NameInOrderByCreatedAtDesc(
-			frequentViewPersons);
-		candidates.addAll(frequentPersionFeeds);
+		long pageOffset = pageable.getOffset();
+		long pageSize = pageable.getPageSize();
+		List<String> feedIds = feedCachManagerService.getFeedIds(userName, pageOffset, pageSize);
+		// TODO  필터 함수
+		List<MainFeedDTO> mainFeeds = feedCachManagerService.getMainFeedsFromIds(userName, feedIds, MainFeedDTO.class)
+			.stream()
+			.filter(this::filterFeedFunction)
+			.toList();
 
-		// 내가 자주 본 글 (상세 보기 기준) => 그 글의 가게 카테고리랑 10개 && 인기글 && 최신 (300개)
-		// TODO 검색한 내용을 기준으로
-		String frequentCategoryKey = USER_FEED_VIEW_LOG + userName + ":category";
-		List<String> frequentCategories = Objects.requireNonNull(
-				redisTemplate.opsForZSet().reverseRange(frequentCategoryKey, 0, 9))
-			.stream().map(String::valueOf).collect(Collectors.toList());
-		List<MainFeed> frequentCategoryFeeds = mainFeedRepository.findByRestaurant_RestaurantCategory_CategoryNameInOrderByCreatedAtDesc(
-			frequentCategories);
-		candidates.addAll(frequentCategoryFeeds);
-
-		/**
-		 * TODO Out-Network (100)개
-		 * 인기 있는 글 위주로 (50개)
-		 * 광고글 (10개)
-		 * 내용(핫한 컨텐츠 + 날씨별 예측) => 코사인 유사도 측정해도 되고... -> elastic (40개)
-		 */
-
-		Page<MainFeedDTO> mainFeed = mainFeedRepository.findByUser_Name(userName, pageable).map(MainFeedDTO::new);
-		List<MainFeedResponseDTO> mainFeedResponseDTO = candidates.stream()
-			.map(MainFeedDTO::new)
-			.filter(Objects::nonNull)
+		List<MainFeedResponseDTO> mainFeedResponseDTO = mainFeeds.stream()
 			.map(new FeedResponseMapper()::ToMainFeedResponseDTO).toList();
 
-		return new CustomPageResponse<>(mainFeedResponseDTO, pageable, mainFeed.getTotalElements());
+		return new CustomPageResponse<>(mainFeedResponseDTO, pageable, feedIds.size());
+
+	}
+
+	/** 평가 함수
+	 * 향후 개인화된 추천 점수 도출
+	 * */
+	public long evaluationFunction(MainFeedDTO mainFeedDTO) {
+		return mainFeedDTO.getCreatedAt().toEpochSecond(ZoneOffset.UTC);
+	}
+
+	/**
+	 * 필터 함수
+	 * @return
+	 */
+	public boolean filterFeedFunction(MainFeedDTO mainFeedDTO) {
+		// 유저 설정 정보
+		// 비공개 여부 등
+		// 유해 게시글 여부
+
+		return true;
 	}
 
 	public long generateId() {
